service.yaml
apiVersion: v1
kind: Service
metadata:
  name: token
  namespace: app
spec:
  type: NodePort
  selector:
    app: token
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: employee
  namespace: app
spec:
  type: NodePort
  selector:
    app: employee
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
